//
//  EventsAccessibility.swift
//  Events
//
//  Created by Igor Hmara on 6/6/21.
//  Copyright © 2021 Soft. All rights reserved.
//

import Foundation

struct EventsAccessibility {
    static let activityIndicator = "eventsActivityIndicator"
    
    struct TabBar {
        static let id = "eventsTabBarId"
        static let eventsItem = "tabBarEventsItem"
        static let favoritesItem = "tabBarFavoritesItem"
    }
    
    struct EventCell {
        static let title = "eventCellTitle"
        static let detailsLabel = "eventCellDetailsLabel"
        static let actionButton = "eventCellActionButton"
    }
    
    static let eventsListNoDataLabel = "eventsListNoDataLabel"
}
