...
            switch result {
            case .success(let eventCellViewModels):
                self?.eventCellViewModels = eventCellViewModels
                self?.view?.reloadUI()
            case .failure:
                self?.view?.showAlert("Something went wrong while getting favorite events".localized,
                                      title: "Error".localized,
                                      handler: nil)
            }
        }
    }
    
    func processCellAction(for indexPath: IndexPath) {
...
